# gazelle_cc

./: .bazelignore  .bazelrc  .bazelrc-9  .bazelrc.ci  .gitignore  BUILD.bazel  CONTRIBUTING.md  MODULE.bazel  README.md  deps.bzl  go.mod  go.sum  runIndexersIntegrationTest.sh
bazel/: BUILD.bazel  (+3 more)
example/bzlmod/: .bazelrc  .bazelrc.ci  MODULE.bazel  README.md
index/: BUILD.bazel  index.go  index_test.go
index/bzlmod/: BUILD.bazel  main.go
index/bzlmod/integration_tests/: BUILD  integration_test.go
index/conan/: BUILD.bazel  main.go
index/conan/integration_tests/: BUILD  integration_test.go
index/conan/internal/targets/: BUILD.bazel  grouping.go  grouping_test.go
index/internal/bazel/: BUILD.bazel  build.pb.go  build.proto  query.go
index/internal/bazel/proto/: BUILD.bazel  build.proto  keep.go
index/internal/bcr/: BUILD.bazel  main.go  registry.go  registry_test.go
index/internal/bcr/indexer/: BUILD.bazel  main.go
index/internal/collections/: BUILD.bazel  collections.go
index/internal/indexer/: BUILD.bazel  ambigiouity_handling.go  ambigiouity_handling_test.go  ambiguity_handling.go  ambiguity_handling_test.go  indexer.go  indexer_test.go
index/internal/indexer/cli/: cli.go
index/internal/tests/: BUILD.bazel  indexer_integration.go  indexer_integration_test.bzl  utils.go
index/internal/tests/example_integration_test/: integration_test.go
index/rules_foreign_cc/: BUILD.bazel  main.go
index/rules_foreign_cc/integration_tests/: BUILD.bazel  integration_test.go
internal/collections/: BUILD.bazel  collections.go  collections_test.go  priority_queue.go  priority_queue_test.go  set.go  set_test.go
internal/index/: BUILD.bazel  index.go  index_test.go
internal/rule_ext/: BUILD.bazel  rule_ext.go  rule_ext_test.go
language/cc/: BUILD.bazel  bzldep-index.json  config.go  config_test.go  embedding.go  fileinfo.go  generate.go  imports.go  lang.go  platform_strings.go  proto.go  resolve.go  resolve_test.go  source_groups.go  source_groups_test.go
language/cc/generation_and_compilation_tests/: BUILD.bazel
language/cc/integration_test/: BUILD.bazel  MODULE.bazel  expectedStderr.txt
language/cc/integration_test/keep_deps/: BUILD.in  BUILD.out  app.cc
language/cc/integration_test/relative_include_paths/: BUILD.out
language/cc/integration_test/subdirectory_basic/: BUILD.out
language/cc/integration_test/subdirectory_match/: BUILD.in  BUILD.out
language/cc/integration_test/subdirectory_with_build_file/: BUILD.in  BUILD.out
language/cc/testdata/: BUILD.bazel
language/cc/testdata/ambiguous_import/: expectedStderr.txt
language/cc/testdata/cc_ambiguous_deps_force_first/: BUILD.in  BUILD.out  MODULE.bazel  expectedStderr.txt  use.cc
language/cc/testdata/cc_ambiguous_deps_ignore/: BUILD.in  BUILD.out  indexfile.json
language/cc/testdata/cc_ambiguous_deps_try_first/: BUILD.in  BUILD.out  expectedStderr.txt  use_bcr.cc
language/cc/testdata/cc_ambiguous_deps_warn/: BUILD.in  BUILD.out  expectedStderr.txt  use_indexfile.cc
language/cc/testdata/cc_generate/: BUILD.out  README.md  expectedStderr.txt  foo.h
language/cc/testdata/cc_grpc_library/: .bazelrc  BUILD.in  MODULE.bazel
language/cc/testdata/cc_grpc_library_composed/: BUILD.out  expectedStderr.txt  use.cc
language/cc/testdata/cc_grpc_library_index_only/: BUILD.out  README.md  use.cc
language/cc/testdata/cc_header_embeds/: BUILD.in  BUILD.out  test.cc
language/cc/testdata/cc_parsing_errors_error/: MODULE.bazel  expectedStderr.txt  main.cc
language/cc/testdata/cc_parsing_errors_ignore/: BUILD.out
language/cc/testdata/cc_parsing_errors_warn/: BUILD.in  BUILD.out  expectedStderr.txt
language/cc/testdata/cc_search/: BUILD.out
language/cc/testdata/cc_unresolved_deps_error/: expectedStderr.txt
language/cc/testdata/cc_unresolved_deps_error_fast/: BUILD.out  expectedStderr.txt
language/cc/testdata/cc_unresolved_deps_ignore/: BUILD.in  BUILD.out
language/cc/testdata/cc_unresolved_deps_warn/: BUILD.in  expectedStderr.txt
language/cc/testdata/cycle-in-existing-units/: BUILD.out  expectedStderr.txt
language/cc/testdata/cycle-in-existing-units_no_merge/: expectedStderr.txt
language/cc/testdata/deps_external/: expectedStderr.txt
language/cc/testdata/deps_index/: BUILD.in  BUILD.out  expectedStderr.txt  first.ccindex
language/cc/testdata/generated_files/: BUILD.in  BUILD.out  shared_with_generated.h  test.cc
language/cc/testdata/include_dep/: BUILD.in  BUILD.out  app.cc
language/cc/testdata/include_prefix_unit_group/: README.md
language/cc/testdata/includes/: BUILD.in  BUILD.out  usage_direct.cc  usage_included_1.cc  usage_included_2.cc
language/cc/testdata/index_globs/: BUILD.in  expectedStderr.txt
language/cc/testdata/keep_deps/: BUILD.in  BUILD.out  app.cc
language/cc/testdata/kind_name_collisions/: expectedStderr.txt
language/cc/testdata/package_by_directory/: expectedStderr.txt
language/cc/testdata/package_by_unit/: expectedStderr.txt
language/cc/testdata/platforms_single/: BUILD.in  BUILD.out  always_active.cc  constrained.cc  default.cc
language/cc/testdata/protobuf/: BUILD.out
language/cc/testdata/protobuf_empty/: BUILD.in  MODULE.bazel
language/cc/testdata/relative_inlcude_paths/: BUILD.out
language/cc/testdata/select_expr/: BUILD.in  BUILD.out  generic_and_constrained.cc  generic_and_default.cc  only_default.cc
language/cc/testdata/subdirectory_basic/: BUILD.out
language/cc/testdata/subdirectory_invalid_glob/: BUILD.in  expectedStderr.txt
language/cc/testdata/subdirectory_match/: BUILD.out
language/cc/testdata/subdirectory_match_conflict/: expectedStderr.txt
language/cc/testdata/subdirectory_with_build_file/: BUILD.out  README.md
language/cc/testdata/tests_directory/: README  expectedStderr.txt
language/cc/testdata/virtual_include_paths/: README.md
language/internal/cc/: BUILD.bazel  macros.go  macros_test.go
scripts/prepare_test_repo/: BUILD.bazel  prepare_test_repo.py
scripts/prepare_test_repo/testdata/: BUILD.out  BUILD.out_expected
scripts/prepare_test_workspace/: BUILD.bazel  prepare_test_workspace.py
(+339 files in other folders)
