load("@gazelle//:def.bzl", "gazelle", "gazelle_binary")

gazelle_binary(
    name = "gazelle_cpp",
    languages = [
        "//language/cpp",
    ],
    visibility = ["//visibility:public"],
)

load("@rules_go//go:def.bzl", "go_path")

gazelle(name = "gazelle")
# gazelle:prefix github.com/EngFlow/gazelle_cpp

go_path(
    name = "gopath",
    mode = "link",
    deps = [
        "//language/cpp",
    ],
)
