"""Bazel Gazelle extension for rules_cc"""

module(name = "gazelle_cc")

bazel_dep(name = "gazelle", version = "0.46.0")
bazel_dep(name = "rules_go", version = "0.59.0")
bazel_dep(name = "rules_proto", version = "7.1.0")
bazel_dep(name = "bazel_skylib", version = "1.8.2")
bazel_dep(name = "package_metadata", version = "0.0.5")

bazel_dep(name = "rules_bazel_integration_test", version = "0.35.0", dev_dependency = True)

go_sdk = use_extension("@rules_go//go:extensions.bzl", "go_sdk")
go_sdk.download(version = "1.24.0")

go_deps = use_extension("@gazelle//:extensions.bzl", "go_deps")
go_deps.from_file(go_mod = "//:go.mod")
use_repo(
    go_deps,
    "com_github_bazelbuild_buildtools",
    "com_github_bmatcuk_doublestar_v4",
    "com_github_stretchr_testify",
    "com_github_ulikunitz_xz",
    "org_golang_google_protobuf",
    "org_golang_x_sync",
)

bazel_binaries = use_extension("@rules_bazel_integration_test//:extensions.bzl", "bazel_binaries", dev_dependency = True)
bazel_binaries.download(version_file = "//:.bazelversion")
use_repo(bazel_binaries, "bazel_binaries")
