"""Bazel Gazelle extension for rules_cc"""

module(name = "gazelle_cc")

bazel_dep(name = "gazelle", version = "0.46.0")
bazel_dep(name = "rules_go", version = "0.59.0")
bazel_dep(name = "rules_proto", version = "7.1.0")
bazel_dep(name = "bazel_skylib", version = "1.8.1")
bazel_dep(name = "package_metadata", version = "0.0.5")

go_sdk = use_extension("@rules_go//go:extensions.bzl", "go_sdk")
go_sdk.download(version = "1.24.0")

go_deps = use_extension("@gazelle//:extensions.bzl", "go_deps")
go_deps.from_file(go_mod = "//:go.mod")
use_repo(
    go_deps,
    "com_github_bazelbuild_buildtools",
    "com_github_bmatcuk_doublestar_v4",
    "com_github_stretchr_testify",
    "com_github_ulikunitz_xz",
    "org_golang_google_protobuf",
    "org_golang_x_sync",
)

bazel_dep(name = "rules_cc", version = "0.2.16", dev_dependency = True)

gazelle_compilation_tests = use_extension("//bazel:gazelle_compilation_tests.bzl", "gazelle_compilation_tests", dev_dependency = True)
gazelle_compilation_tests.discover(base_directory = "language/cc/generation_and_compilation_tests")
use_repo(
    gazelle_compilation_tests,
    "compilation_test_subdirectory_basic",
    "compilation_test_virtual_include_paths",
)
