load("@rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "index",
    srcs = ["index.go"],
    importpath = "github.com/EngFlow/gazelle_cc/index",
    visibility = [
        ":__subpackages__",
        "//language/cc:__pkg__",
    ],
    deps = [
        "//internal/collections",
        "@gazelle//label",
    ],
)

go_test(
    name = "index_test",
    srcs = ["index_test.go"],
    embed = [":index"],
    deps = ["@com_github_stretchr_testify//assert"],
)

test_suite(
    name = "integration_tests",
    tags = ["manual"],
    tests = [
        "//index/conan/integration_tests:integration_test",
        "//index/internal/tests/example_integration_test",
        "//index/rules_foreign_cc/integration_tests:integration_test",
    ],
)
