module(name = "gazelle_cc_example")

bazel_dep(name = "gazelle", version = "0.46.0")
bazel_dep(name = "gazelle_cc", version = "")

# TODO: Remove this once Gazelle 0.48.0 is released
archive_override(
    module_name = "gazelle",
    integrity = "sha256-vOMGUFZpJe0NGhLQmsT1Q0yrFQcwgQlPz8J6MPL0Blg=",
    strip_prefix = "bazel-gazelle-baca6fbbd606df4607e3caf213e65db8fd37ac80",
    urls = ["https://github.com/bazel-contrib/bazel-gazelle/archive/baca6fbbd606df4607e3caf213e65db8fd37ac80.tar.gz"],
)

local_path_override(
    module_name = "gazelle_cc",
    path = "../../",
)

bazel_dep(name = "rules_cc", version = "0.2.8")
bazel_dep(name = "rules_proto", version = "7.1.0")
bazel_dep(name = "protobuf", version = "30.2")
bazel_dep(name = "fmt", version = "11.1.4")

bazel_dep(name = "googletest", version = "1.17.0.bcr.2", dev_dependency = True)
