load("@rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "rule_ext",
    srcs = ["rule_ext.go"],
    importpath = "github.com/EngFlow/gazelle_cc/internal/rule_ext",
    visibility = ["//language/cc:__pkg__"],
    deps = [
        "@com_github_bazelbuild_buildtools//build",
        "@gazelle//rule",
    ],
)

go_test(
    name = "rule_ext_test",
    srcs = ["rule_ext_test.go"],
    embed = [":rule_ext"],
    deps = [
        "@com_github_stretchr_testify//assert",
        "@com_github_stretchr_testify//require",
        "@gazelle//rule",
    ],
)
