load("@gazelle//:def.bzl", "gazelle_binary")
load("@rules_go//go:def.bzl", "go_library", "go_test")

# gazelle:exclude unit_tests

go_library(
    name = "cc",
    srcs = [
        "config.go",
        "fileinfo.go",
        "generate.go",
        "imports.go",
        "lang.go",
        "platform_strings.go",
        "proto.go",
        "resolve.go",
        "source_groups.go",
    ],
    embedsrcs = [
        "bzldep-index.json",
    ],
    importpath = "github.com/EngFlow/gazelle_cc/language/cc",
    visibility = ["//visibility:public"],
    deps = [
        "//internal/collections",
        "//internal/index",
        "//language/internal/cc/parser",
        "//language/internal/cc/platform",
        "@com_github_bazelbuild_buildtools//build",
        "@com_github_bmatcuk_doublestar_v4//:doublestar",
        "@gazelle//config",
        "@gazelle//label",
        "@gazelle//language",
        "@gazelle//language/proto",
        "@gazelle//pathtools",
        "@gazelle//repo",
        "@gazelle//resolve",
        "@gazelle//rule",
        "@gazelle//walk",
    ],
)

go_test(
    name = "cc_test",
    size = "small",
    srcs = [
        "config_test.go",
        "imports_test.go",
        "source_groups_test.go",
    ],
    embed = [":cc"],
    deps = [
        "//language/internal/cc/parser",
        "@com_github_stretchr_testify//assert",
        "@com_github_stretchr_testify//require",
    ],
)

gazelle_binary(
    name = "gazelle_for_tests",
    testonly = True,
    languages = [
        "@gazelle//language/proto",
        "//language/cc",
    ],
    visibility = ["//language/cc/unit_tests:__pkg__"],
)
