load("@rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "bcr_lib",
    srcs = ["main.go"],
    importpath = "github.com/EngFlow/gazelle_cc/index/internal/bcr",
    visibility = ["//visibility:private"],
    deps = [
        "//index/internal/bazel",
        "//index/internal/bazel/proto",
        "//internal/collections",
        "@com_github_ulikunitz_xz//:xz",
        "@gazelle//label",
    ],
)

go_binary(
    name = "bcr",
    embed = [":bcr_lib"],
    visibility = ["//index:__subpackages__"],
)
