load("@rules_go//go:def.bzl", "go_library")

go_library(
    name = "indexer",
    srcs = ["indexer.go"],
    importpath = "github.com/EngFlow/gazelle_cc/index/internal/indexer",
    visibility = ["//index:__subpackages__"],
    deps = [
        "//index/internal/collections",
        "@gazelle//label",
    ],
)
