load("@rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "indexer",
    srcs = [
        "ambigiouity_handling.go",
        "indexer.go",
    ],
    importpath = "github.com/EngFlow/gazelle_cc/index/internal/indexer",
    visibility = ["//index:__subpackages__"],
    deps = [
        "//internal/collections",
        "@gazelle//label",
    ],
)

go_test(
    name = "indexer_test",
    srcs = [
        "ambigiouity_handling_test.go",
        "indexer_test.go",
    ],
    embed = [":indexer"],
    deps = [
        "//internal/collections",
        "@com_github_stretchr_testify//assert",
        "@gazelle//label",
    ],
)
