load("@bazel_skylib//:bzl_library.bzl", "bzl_library")
load("@rules_go//go:def.bzl", "go_library")

bzl_library(
    name = "indexer_integration_test",
    srcs = ["indexer_integration_test.bzl"],
    visibility = ["//index:__subpackages__"],
    deps = ["@rules_go//go:def"],
)

go_library(
    name = "tests",
    srcs = [
        "indexer_integration.go",
        "utils.go",
    ],
    importpath = "github.com/EngFlow/gazelle_cc/index/internal/tests",
    visibility = ["//index:__subpackages__"],
    deps = [
        "@com_github_stretchr_testify//assert",
        "@rules_go//go/runfiles",
    ],
)
