load("@bazel_skylib//lib:paths.bzl", "paths")
load("@gazelle//:def.bzl", "gazelle_generation_test")

[
    gazelle_generation_test(
        # Name the test the path to the directory containing the WORKSPACE file.
        name = test_dir,
        size = "small",
        gazelle_binary = "//language/cc:gazelle_for_tests",
        test_data = glob([test_dir + "/**"]),
    )
    for test_dir in [
        paths.dirname(p)
        # Note that glob matches "this package's directories and non-subpackage
        # subdirectories," so any directory with a BUILD or BUILD.bazel file
        # will not match, but those with BUILD.in and BUILD.out will.
        for p in glob([
            "**/WORKSPACE",
            "**/MODULE.bazel",
        ])
    ]
]
