load("@bazel_skylib//lib:paths.bzl", "paths")
load("@gazelle//:def.bzl", "gazelle_binary", "gazelle_generation_test")
load("//bazel:gazelle_compilation_tests.bzl", "gazelle_compilation_test")

gazelle_binary(
    name = "gazelle_for_testing",
    testonly = True,
    languages = [
        "@gazelle//language/proto",
        "//language/cc",
    ],
)

ALL_TEST_DIRS = [paths.dirname(p) for p in glob([
    "**/WORKSPACE",
    "**/MODULE.bazel",
])]

[gazelle_generation_test(
    name = test_dir,
    gazelle_binary = ":gazelle_for_testing",
    test_data = glob(
        include = [test_dir + "/**"],
    ),
) for test_dir in ALL_TEST_DIRS]

COMPILABLE_TEST_DIRS = [paths.dirname(p) for p in glob(
    include = [
        "**/MODULE.bazel",
        "**/WORKSPACE",
    ],
    exclude = [
        # Expected unresolved include paths, won't compile.
        "absolute_include/**",
        "cc_ambiguous_deps_*/**",
        "cc_generate/**",
        "cc_unresolved_deps_*/**",
        "cycle-in-existing-units_no_merge/**",
        "deps_external/**",
        "deps_index/**",
        "index_globs_excluded/**",
        "kind_name_collisions/**",

        # Sources with syntax errors won't compile.
        "cc_parsing_errors_*/**",

        # Expected no targets to be generated.
        "subdirectory_invalid_glob/**",
        "subdirectory_match_conflict/**",

        # Expected invalid layout of test runners, won't compile.
        "tests_directory/**",

        # TODO: Contains gazelle:map_kind pointing to non-existing custom_cc.bzl file.
        "map_kind/**",
        "non_locale_file_deps/**",

        # TODO: a_test.c and d_test.c both contain main function, but they're packed into the same "a_test" cc_test.
        "package_by_directory/**",

        # TODO: undefined //platforms package.
        "platforms/**",

        # TODO: No such target //:root_proto.
        "protobuf/**",
    ],
)]

[gazelle_compilation_test(
    name = test_dir + "_compilation",
    test_dir = test_dir,
) for test_dir in COMPILABLE_TEST_DIRS]
