load("@rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "cc",
    srcs = ["macros.go"],
    importpath = "github.com/EngFlow/gazelle_cc/language/internal/cc",
    visibility = ["//language:__subpackages__"],
)

go_test(
    name = "cc_test",
    srcs = ["macros_test.go"],
    embed = [":cc"],
    deps = ["@com_github_stretchr_testify//assert"],
)
