load("@rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "indexer_lib",
    srcs = ["main.go"],
    importpath = "github.com/EngFlow/gazelle_cc/index/internal/bcr/indexer",
    visibility = ["//visibility:private"],
    deps = [
        "//index/internal/bcr",
        "//index/internal/indexer",
        "//internal/collections",
    ],
)

go_binary(
    name = "indexer",
    embed = [":indexer_lib"],
    visibility = ["//index:__subpackages__"],
)
