load("@rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "lexer",
    srcs = [
        "cursor.go",
        "lexer.go",
        "rules.go",
        "token.go",
    ],
    importpath = "github.com/EngFlow/gazelle_cc/language/internal/cc/lexer",
    visibility = ["//language:__subpackages__"],
    deps = ["//internal/collections"],
)

go_test(
    name = "lexer_test",
    srcs = ["lexer_test.go"],
    embed = [":lexer"],
    deps = ["@com_github_stretchr_testify//assert"],
)
