load("@rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "parser",
    srcs = [
        "directive.go",
        "expr.go",
        "macros.go",
        "parser.go",
        "source_info.go",
        "token_reader.go"
    ],
    importpath = "github.com/EngFlow/gazelle_cc/language/internal/cc/parser",
    visibility = ["//language:__subpackages__"],
)

go_test(
    name = "parser_test",
    srcs = [
        "expr_test.go",
        "macros_test.go",
        "parser_test.go",
        "source_info_test.go",
        "token_reader_test.go",
    ],
    embed = [":parser"],
    deps = ["@com_github_stretchr_testify//assert"],
)
