bazel_dep(name = "rules_cc", version = "0.1.1")
bazel_dep(name = "gazelle", version = "0.42.0")
bazel_dep(name = "gazelle_cc", version = "0.1.0")
local_path_override(
    module_name = "gazelle_cc",
    path = "<GAZELLE_CC_REPO>",
)

# Register direct and transitive dependencies
load_conan_dependencies = use_extension("//conan:conan_deps_module_extension.bzl", "conan_extension")
use_repo(load_conan_dependencies, "fmt", "libiconv", "zlib")
